// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoding an array with multiple elements works 1`] = `
Array [
  Array [
    null,
    null,
  ],
  4,
]
`;

exports[`decoding an array with type null works 1`] = `
Array [
  Array [
    null,
  ],
  2,
]
`;

exports[`encoding an array of null returns expected value 1`] = `
"~
"
`;

exports[`we can both encode and decode 1`] = `
"+abcd
~
+efgh
"
`;

exports[`we can both encode and decode 2`] = `
Array [
  Array [
    "abcd",
    null,
    "efgh",
  ],
  14,
]
`;
